# slamkit_ros

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: slamkit_usb.lanuch  slamkit_usb.launch  test_slamkit.lanuch  test_slamkit.launch
rviz/: imu_display.rviz
scripts/: add_udev.sh
src/: client.cpp  node.cpp
